tests/errors/null_to_nonnull_argument.dang
# Null cannot be passed to a non-null function argument
echo(value: String!): String! {
  value
}

let result = echo(null)
